@@ -453,6 +453,87 @@ class FieldCharTestCase(unittest.TestCase, CommonTestCaseMixin):
                     'char': 'foobar',
                     })
 
+    @with_transaction()
+    def test_create_strip(self):
+        "Test create with stripping"
+        Char = Pool().get('test.char_strip')
+
+        char, = Char.create([{
+                    'char': " Foo ",
+                    'char_unstripped': " Foo ",
+                    }])
+
+        read_record = Char(char.id)
+        self.assertEqual(read_record.char, "Foo")
+        self.assertEqual(read_record.char_unstripped, " Foo ")
+
+    @with_transaction()
+    def test_create_strip_with_sql_value(self):
+        "Test create with stripping with SQL value"
+        Char = Pool().get('test.char_strip')
+
+        char, = Char.create([{
+                    'char': Literal(" Foo "),
+                    'char_unstripped': Literal(" Foo "),
+                    }])
+
+        read_record = Char(char.id)
+        self.assertEqual(read_record.char, "Foo")
+        self.assertEqual(read_record.char_unstripped, " Foo ")
+
+    @with_transaction()
+    def test_write_strip(self):
+        "Test write with stripping"
+        Char = Pool().get('test.char_strip')
+
+        char, = Char.create([{
+                    'char': "Foo",
+                    'char_unstripped': "Foo",
+                    }])
+
+        Char.write([char], {
+                'char': " Bar ",
+                'char_unstripped': " Bar ",
+                })
+        read_record = Char(char.id)
+        self.assertEqual(read_record.char, "Bar")
+        self.assertEqual(read_record.char_unstripped, " Bar ")
+
+    @with_transaction()
+    def test_write_strip_with_sql_value(self):
+        "Test write with stripping with SQL value"
+        Char = Pool().get('test.char_strip')
+
+        char, = Char.create([{
+                    'char': "Foo",
+                    'char_unstripped': "Foo",
+                    }])
+
+        Char.write([char], {
+                'char': Literal(" Bar "),
+                'char_unstripped': Literal(" Bar "),
+                })
+        read_record = Char(char.id)
+        self.assertEqual(read_record.char, "Bar")
+        self.assertEqual(read_record.char_unstripped, " Bar ")
+
+    @with_transaction()
+    def test_set_strip(self):
+        "Test set with stripping"
+        Char = Pool().get('test.char_strip')
+
+        char = Char()
+
+        char.char = " Foo "
+        char.char_unstripped = " Foo "
+        self.assertEqual(char.char, "Foo")
+        self.assertEqual(char.char_unstripped, " Foo ")
+
+        char.save()
+        read_record = Char(char.id)
+        self.assertEqual(read_record.char, "Foo")
+        self.assertEqual(read_record.char_unstripped, " Foo ")
+
 
 class FieldCharTranslatedTestCase(unittest.TestCase, CommonTestCaseMixin):
     "Test Field Char Translated"
