@@ -1,3 +1,4 @@
+* Add option to strip leading and trailing whitespace from fields.Char
 * Combine search and get_keys in DictSchemaMixin
 * Reset less often the user sessions
 * Protect trusted devices against brute force attack
